--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="CameraManager.h" />
     <ClInclude Include="cheerLeader.h" />
     <ClInclude Include="commonMacroFunction.h" />
+    <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="EasyStage.h" />
     <ClInclude Include="effect.h" />
     <ClInclude Include="effectManager.h" />
@@ -170,13 +171,38 @@
     <ClInclude Include="HardStage.h" />
     <ClInclude Include="image.h" />
     <ClInclude Include="imageManager.h" />
+    <ClInclude Include="IPlayerState.h" />
     <ClInclude Include="ItemObj.h" />
     <ClInclude Include="keyManager.h" />
     <ClInclude Include="Linear.h" />
+    <ClInclude Include="LoadingScene.h" />
     <ClInclude Include="NormalStage.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="playerCombo1.h" />
+    <ClInclude Include="playerCombo2.h" />
+    <ClInclude Include="playerCombo3.h" />
+    <ClInclude Include="playerDashAttack.h" />
+    <ClInclude Include="playerDashSAttack.h" />
+    <ClInclude Include="playerDead.h" />
+    <ClInclude Include="playerDown.h" />
+    <ClInclude Include="playerGuard.h" />
+    <ClInclude Include="playerHit.h" />
+    <ClInclude Include="playerIdle.h" />
+    <ClInclude Include="playerJump.h" />
+    <ClInclude Include="playerJumpAttack.h" />
+    <ClInclude Include="playerLadder.h" />
+    <ClInclude Include="playerRoll.h" />
+    <ClInclude Include="playerRun.h" />
+    <ClInclude Include="playerSAttack.h" />
+    <ClInclude Include="playerSAttackDown.h" />
+    <ClInclude Include="playerStand.h" />
+    <ClInclude Include="playerStick.h" />
+    <ClInclude Include="playerStomp.h" />
+    <ClInclude Include="playerStun.h" />
+    <ClInclude Include="playerWait.h" />
+    <ClInclude Include="playerWalk.h" />
     <ClInclude Include="playGround.h" />
     <ClInclude Include="randomFunction.h" />
     <ClInclude Include="Resource.h" />
@@ -212,6 +238,7 @@
     <ClCompile Include="BrokenObj.cpp" />
     <ClCompile Include="CameraManager.cpp" />
     <ClCompile Include="cheerLeader.cpp" />
+    <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="EasyStage.cpp" />
     <ClCompile Include="effect.cpp" />
     <ClCompile Include="effectManager.cpp" />
@@ -226,13 +253,38 @@
     <ClCompile Include="HardStage.cpp" />
     <ClCompile Include="image.cpp" />
     <ClCompile Include="imageManager.cpp" />
+    <ClCompile Include="IPlayerState.cpp" />
     <ClCompile Include="ItemObj.cpp" />
     <ClCompile Include="keyManager.cpp" />
     <ClCompile Include="Linear.cpp" />
+    <ClCompile Include="LoadingScene.cpp" />
     <ClCompile Include="NormalStage.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="playerCombo1.cpp" />
+    <ClCompile Include="playerCombo2.cpp" />
+    <ClCompile Include="playerCombo3.cpp" />
+    <ClCompile Include="playerDashAttack.cpp" />
+    <ClCompile Include="playerDashSAttack.cpp" />
+    <ClCompile Include="playerDead.cpp" />
+    <ClCompile Include="playerDown.cpp" />
+    <ClCompile Include="playerGuard.cpp" />
+    <ClCompile Include="playerHit.cpp" />
+    <ClCompile Include="playerIdle.cpp" />
+    <ClCompile Include="playerJump.cpp" />
+    <ClCompile Include="playerJumpAttack.cpp" />
+    <ClCompile Include="playerLadder.cpp" />
+    <ClCompile Include="playerRoll.cpp" />
+    <ClCompile Include="playerRun.cpp" />
+    <ClCompile Include="playerSAttack.cpp" />
+    <ClCompile Include="playerSAttackDown.cpp" />
+    <ClCompile Include="playerStand.cpp" />
+    <ClCompile Include="playerStick.cpp" />
+    <ClCompile Include="playerStomp.cpp" />
+    <ClCompile Include="playerStun.cpp" />
+    <ClCompile Include="playerWait.cpp" />
+    <ClCompile Include="playerWalk.cpp" />
     <ClCompile Include="playGround+setImage.cpp" />
     <ClCompile Include="playGround.cpp" />
     <ClCompile Include="SaveLoadManager.cpp" />
