--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
@@ -477,6 +477,12 @@
     <ClInclude Include="DialogueManager.h">
       <Filter>2DGameFramework\Manager</Filter>
     </ClInclude>
+    <ClInclude Include="SelectScene.h">
+      <Filter>playGround\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Interpolation.h">
+      <Filter>2DGameFramework\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -847,6 +853,12 @@
     </ClCompile>
     <ClCompile Include="playerWalk.cpp">
       <Filter>playGround\Player\playerState</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectScene.cpp">
+      <Filter>playGround\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Interpolation.cpp">
+      <Filter>2DGameFramework\Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
