--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
@@ -88,6 +88,9 @@
     <Filter Include="playGround\Player\playerState">
       <UniqueIdentifier>{3029c193-9046-4d28-96a4-4786c162297e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="playGround\CollisionManager">
+      <UniqueIdentifier>{6971b850-69b5-40a7-aeb6-5ad06a8d859a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -483,6 +486,9 @@
     <ClInclude Include="Interpolation.h">
       <Filter>2DGameFramework\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="CollisionManager.h">
+      <Filter>playGround\CollisionManager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -859,6 +865,9 @@
     </ClCompile>
     <ClCompile Include="Interpolation.cpp">
       <Filter>2DGameFramework\Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="CollisionManager.cpp">
+      <Filter>playGround\CollisionManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
