상태패턴 얼추완료
상호작용관련 안했음 / 이팩트랑 효과음 넣고 / 세세한거 채워나가야할 듯!

--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj
@@ -230,6 +230,7 @@
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="playerClimb.h" />
+    <ClInclude Include="playerClimbTop.h" />
     <ClInclude Include="playerCombo1.h" />
     <ClInclude Include="playerCombo2.h" />
     <ClInclude Include="playerCombo3.h" />
@@ -366,6 +367,7 @@
     <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="playerClimb.cpp" />
+    <ClCompile Include="playerClimbTop.cpp" />
     <ClCompile Include="playerCombo1.cpp" />
     <ClCompile Include="playerCombo2.cpp" />
     <ClCompile Include="playerCombo3.cpp" />
