--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
@@ -504,6 +504,9 @@
     <ClInclude Include="bossSlapAttack.h">
       <Filter>playGround\EnemyManager\Enemy\BossState</Filter>
     </ClInclude>
+    <ClInclude Include="playerClimbTop.h">
+      <Filter>playGround\Player\playerState</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -898,6 +901,9 @@
     </ClCompile>
     <ClCompile Include="bossSlapAttack.cpp">
       <Filter>playGround\EnemyManager\Enemy\BossState</Filter>
+    </ClCompile>
+    <ClCompile Include="playerClimbTop.cpp">
+      <Filter>playGround\Player\playerState</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
