--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj
@@ -228,6 +228,7 @@
     <ClInclude Include="NormalStage.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectManager.h" />
+    <ClInclude Include="pet.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="playerClimb.h" />
     <ClInclude Include="playerClimbTop.h" />
@@ -365,6 +366,7 @@
     <ClCompile Include="NormalStage.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
+    <ClCompile Include="pet.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="playerClimb.cpp" />
     <ClCompile Include="playerClimbTop.cpp" />
