--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
@@ -510,8 +510,11 @@
     <ClInclude Include="playerClimbTop.h">
       <Filter>playGround\Player\playerState</Filter>
     </ClInclude>
-    <ClInclude Include="pet.h">
+    <ClInclude Include="IEnemyState.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="pet.h">
+      <Filter>playGround\Pet</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -911,8 +914,11 @@
     <ClCompile Include="playerClimbTop.cpp">
       <Filter>playGround\Player\playerState</Filter>
     </ClCompile>
-    <ClCompile Include="pet.cpp">
+    <ClCompile Include="IEnemyState.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="pet.cpp">
+      <Filter>playGround\Pet</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
