플레이어 공격 다 뜯어고침
throw렌더 를 위한 불값해줘야하고, 어택렉트 아직안한애들 어택렉트만들어서 나머지 처리해줘야함

--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj
@@ -284,6 +284,7 @@
     <ClInclude Include="utils.h" />
     <ClInclude Include="vector3.h" />
     <ClInclude Include="Video.h" />
+    <ClInclude Include="Weapon.h" />
     <ClInclude Include="windowAPI.h" />
     <ClInclude Include="zOrderManager.h" />
   </ItemGroup>
@@ -424,6 +425,7 @@
     <ClCompile Include="utils.cpp" />
     <ClCompile Include="vector3.cpp" />
     <ClCompile Include="Video.cpp" />
+    <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="winMain.cpp" />
     <ClCompile Include="zOrderManager.cpp" />
   </ItemGroup>
