에너미 상태패턴 수정
수민센세 도움 받는중

--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj.filters
@@ -510,14 +510,14 @@
     <ClInclude Include="playerClimbTop.h">
       <Filter>playGround\Player\playerState</Filter>
     </ClInclude>
-    <ClInclude Include="IEnemyState.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Weapon.h">
       <Filter>playGround\ObjectManager\Weapon</Filter>
     </ClInclude>
     <ClInclude Include="pet.h">
       <Filter>playGround\Player\Pet</Filter>
+    </ClInclude>
+    <ClInclude Include="IEnemyState.h">
+      <Filter>playGround\EnemyManager\Enemy\EnemyState</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -911,9 +911,6 @@
     <ClCompile Include="playerClimbTop.cpp">
       <Filter>playGround\Player\playerState</Filter>
     </ClCompile>
-    <ClCompile Include="IEnemyState.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="playGround+setImage.cpp">
       <Filter>playGround</Filter>
     </ClCompile>
@@ -922,6 +919,9 @@
     </ClCompile>
     <ClCompile Include="pet.cpp">
       <Filter>playGround\Player\Pet</Filter>
+    </ClCompile>
+    <ClCompile Include="IEnemyState.cpp">
+      <Filter>playGround\EnemyManager\Enemy\EnemyState</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
