--- a/RiverCityGirls_DontSleep/windowAPI.vcxproj
+++ b/RiverCityGirls_DontSleep/windowAPI.vcxproj
@@ -393,7 +393,7 @@
     <ClCompile Include="playerThrow.cpp" />
     <ClCompile Include="playerWait.cpp" />
     <ClCompile Include="playerWalk.cpp" />
-    <ClCompile Include="playGround+setImage.cpp" />
+    <ClCompile Include="playGround+addSource.cpp" />
     <ClCompile Include="playGround.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
